[package]
name = "serde_jacl"
version = "0.2.1"
authors = ["AmethystGear <shivenbhatt@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Serialization and Deserialization of JACL"
repository = "https://github.com/AmethystGear/serde_jacl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
serde = { version = "1.0.116", features = ["derive"] }
escape8259 = "0.5.0"
num = "0.3.0"